# cardano-c-java-bridge

./: .gitignore  Cargo.toml  README.md  cardano.h  cargo-config.toml
src/: android.rs  lib.rs
