[package]
name = "cardano-c"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolas.diprima@iohk.io>", "Vincent Hanquez <vincent.hanquez@iohk.io>"]


[dependencies]
cardano = { path = "../cardano" }

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.10.2", default-features = false }

